// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly rendedr ExpensesSummary with 0 expense 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling to be 
    $0.00
    .
  </h1>
</div>
`;

exports[`should correctly rendedr ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling to be 
    $123.45
    .
  </h1>
</div>
`;
